Ensure reload symbol is visible and uses DS

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,6 +69,7 @@ select:disabled {
 }
 
 .field-container__img {
+  padding-top: 4px;
   width: 26px;
   height: auto;
   display: block;
@@ -76,6 +77,7 @@ select:disabled {
   top: -2px;
   right: 2px;
   cursor: pointer;
+  z-index: 3;
 }
 
 .btn {
